# sympy-texinfo-patch

./: Makefile  README.md  pyproject.toml  setup.py  sympy_texinfo_patch.py  view.sh
src/sympy_texinfo_patch/: __init__.py  extension.py
tests/: conftest.py  test_extension.py
tests/test_docs/source/: conf.py
tests/testdata/test-basic/: actual  conf.py  expected  index.rst  intro-tutorial.rst
tests/testdata/test-empty-contents/: conf.py  index.rst  wester.rst
tests/testdata/test-multiple/: advanced.rst  basics.rst  conf.py  index.rst
tests/testdata/test-nested/: agca.rst  conf.py  wester.rst
